--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- favicon -->
+    
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -71,7 +71,7 @@
         <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
         <h1 id="welcomeH1">Welcome to the TEDY CLUB NFT Project!</h1>
         <p id="welcomeP">
-          The CodeCats NFT Project is a decentralized, open-source project that aims to demonstrate how to develope and launch your own NFT Collection. Follow step by step on the <a href="https://youtube.com/codestackr"  target="_blank" rel="noopener noreferrer">codeSTACKr</a> YouTube channel.
+          MINT YOUR OWN TEDY and JOIN THE COMMUNITY
         </p>
       </div>
     </section>
@@ -104,11 +104,11 @@
         </div>
         <h1 id="mainHeading">NFT Drop Coming Soon!!</h1>
         <p id="mainText">
-          A new batch of cute cats will be available very soon!
+          NEW TEDYs Waiting to be unleashed.
         </p>
         <a
           id="actionButton"
-          href="https://discord.gg/A9CnsVzzkZ"
+          href="https://discord.com/"
           target="_blank"
           rel="noopener noreferrer"
           class="hero-btn btn"
@@ -122,7 +122,7 @@
             </div>
             <div>
               <h3>Price Per Mint</h3>
-              <p id="pricePerMint">1 ETH</p>
+              <p id="pricePerMint">1 MATIC</p>
             </div>
             <div>
               <h3>Max</h3>
