--- a/frontend/index.html
+++ b/frontend/index.html
@@ -146,7 +146,7 @@
           </div>
           <div class="total-price-container">
             <h3>Total</h3>
-            <p id="totalPrice">1 MATIC</p>
+            <p id="totalPrice">1</p>
           </div>
           <button id="mintButton" class="hero-btn btn mint-btn">Mint</button>
         </div>
